syntax = "proto3";

package auth;

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc Registration(RegistrationRequest) returns (RegistrationResponse) {};
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 status = 3;
    string message = 4;
}

message LoginResponse {
    string token = 1;
}

message RegistrationRequest {
    string email = 1;
    string password = 2;
    int32 status = 3;
    string message = 4;
}

message RegistrationResponse {
    string token = 1;
}